// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches screenshot 1`] = `
<DocumentFragment>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-bmmCCE-color-secondary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-bXKVvx-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-cbktrZ-color-success c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-fMjTrh-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-fWqKPQ-color-warning c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dKsfPN-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-cgBQIK-color-error c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-gURxYt-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-cmVdgU-size-sm c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-lXiLo-size-lg c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dXGhuR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-kJTZqu-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-isDisabled-false c-jXjExk-dEccxv-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
